Добавил поле продуктам (сообщение об отсутствии бесплатных доп товаров)

--- a/app/fields/products.ini
+++ b/app/fields/products.ini
@@ -38,6 +38,7 @@ autoadd_products
 legend "Прочее "
 checkbox is_index "Публиковать на главную"
 checkbox_act is_recommended "Отображать блок «С этим блюдом рекомендуем»"
+checkbox is_show_message "Отображать сообщение о добавлении дополнительных товаров (соевый соус, имбирь, васаби)"
 checkbox not_dd "Это блюдо «НЕ собственного производства»"
 hint "Блюда не собственного производства, не участвует в акциях: Скидка за самовывоз и пр. "
 small id_1c "1С ID"
