Вносил поправки, заменял Аппетит на WOW!Pizza

--- a/app/fields/abouts.ini
+++ b/app/fields/abouts.ini
@@ -1,6 +1,6 @@
 [admin.fields]
 small title "Название"
-legend "2 факта про Аппетит "
+legend "2 факта про WOW! Pizza "
 mtext text "1 факт"
 mtext text2 "2 факт"
 legend "Главная цель и результаты "
